plugins/htmltools/testData/highlighting/CheckValidXmlInScriptBodyInspection2.xhtml
<script type="text/javascript"><EOLError/>
  <![CDATA[
</<error descr="Statement expected">s</error>cript<error descr="Statement expected">></error><EOLError descr="Unexpected end of file"></EOLError>